--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wp-floating-social",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "Floating Social Media Popout allows your webpage to show a face book like box and GooglePlus Badge widget when a visitor mouse hover the floating face book icon or GooglePlus icon located on right side of webpage.",
   "main": "lib/index.js",
   "scripts": {
@@ -72,6 +72,7 @@
     "src/",
     "resources/",
     "menu/",
+    "scripts/",
     "cli.js",
     "index.js"
   ]
