--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wp-floating-social",
-  "version": "1.1.4",
+  "version": "1.1.5",
   "description": "Floating Social Media Popout allows your webpage to show a face book like box and GooglePlus Badge widget when a visitor mouse hover the floating face book icon or GooglePlus icon located on right side of webpage.",
   "main": "lib/index.js",
   "scripts": {
@@ -16,7 +16,7 @@
     "wordpress",
     "plugin"
   ],
-  "author": "Ionică Bizău <bizauionica@gmail.com> (http://ionicabizau.net)",
+  "author": "Ionică Bizău <bizauionica@gmail.com> (https://ionicabizau.net)",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/IonicaBizau/wp-floating-social/issues"
@@ -68,12 +68,11 @@
     "bin/",
     "app/",
     "lib/",
-    "build/",
     "dist/",
     "src/",
+    "scripts/",
     "resources/",
     "menu/",
-    "scripts/",
     "cli.js",
     "index.js"
   ]
